--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+# ============================================================
+# .gitignore (Keep unnecessary files out of the repository)
+# ============================================================
+
 # REQ.UNIVERSAL: All professional GitHub project repositories MUST include .gitignore.
 # WHY: Prevent committing generated artifacts, local state, secrets, and OS-specific files.
 # ALT: Repository may customize ignores, but MUST preserve universal safety rules.
-# CUSTOM: Logs may be temporarily committed for verification; keep ignored for production and security.
+# CUSTOM: Logs may be temporarily committed for verification; keep ignored for
+# production use and security.
+
 
 # === Universal (all projects, all languages) ===
 
@@ -24,6 +30,7 @@ PRIVATE-NOTES.md
 .vscode/
 
 # WHY: Commit recommended extensions (opt-in) for consistent development experience.
+# NOTE: Share recommendations, not personal editor styles or preferences.
 !.vscode/extensions.json
 !.vscode/settings.json
 
