--- a/SE_MANIFEST.toml
+++ b/SE_MANIFEST.toml
@@ -1,4 +1,17 @@
+# ============================================================
+# SE_MANIFEST.toml (Repository Intent, Scope, and Role)
+# ============================================================
+
 schema = "se-manifest-1"
+schema_url = "https://github.com/structural-explainability/spec-se/blob/main/manifests/se-manifest-1.md"
+
+[meta]
+# Non-normative contextual information
+framework = "Structural Explainability"
+framework_url = "https://github.com/structural-explainability"
+framework_note = "Provides definitions and conventions for SE_MANIFEST semantics."
+description = "Declarative claim of repository intent, scope, and role."
+purpose = "To make explicit the boundaries, responsibilities, and expectations of this repository relative to others."
 
 [repo]
 name = "datafun-01-foundations"
@@ -59,6 +72,3 @@ bib_hint = "case2026-datafun-01-foundations"
 
 [traceability]
 identifier_map = "none"
-
-[meta]
-# Keywords live only in CITATION.cff (canonical).
