--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,3 +1,7 @@
+# ============================================================
+# mkdocs.yaml (MkDocs configuration file)
+# ============================================================
+
 # REQ.PROJECT: MkDocs configuration file (mkdocs.yaml)
 #      to automatically build an associated website
 #      for professional project documentation and communication.
@@ -6,14 +10,14 @@
 #         2. docs/ folder with markdown files (.md) for content
 #         3. GitHub Actions workflow to build and deploy site (in .github/workflows/)
 #
-# WHY: This data file provides the site structure and settings
+# WHY-FILE: This data file provides the site structure and settings
 
-site_name: "DataFun Project 01 Documentation"
+site_name: "Project Documentation"
 #TODO: Change to your GitHub Pages URL.
 site_url: https://denisecase.github.io/datafun-01-foundations/
 #TODO: Change to your GitHub repository URL.
 repo_url: https://github.com/denisecase/datafun-01-foundations
-site_description: Project 01 documentation.
+site_description: Project documentation.
 docs_dir: docs
 site_dir: site
 extra:
@@ -64,7 +68,17 @@ plugins:
             show_signature_annotations: true
             separate_signature: true # Makes function signatures easier to read
 
+# ============================================================
+# DEFINE THE SITE NAVIGATION STRUCTURE (using files in docs/)
+# ============================================================
+
 nav:
   - Home: index.md
+  - Guides: guides.md
   - Variables: variables.md
   - Example Output: example-output.md
+  - Docs: project-mkdocs.md
+
+  - ANNOTATIONS: root/ANNOTATIONS.md
+  - INSTRUCTORS: root/INSTRUCTORS.md
+  - POLICIES: root/POLICIES.md
