--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+# ============================================================
+# pyproject.toml (Python and MkDocs project configuration)
+# ============================================================
+
 # REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
 # WHY: Centralizes project configuration.
 
@@ -13,23 +17,24 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# WHY: Optional dependency groups keep the core install clean and focused.
 dev = [
     # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
-    "bandit>=1.7.5",
+    "bandit>=1.9.2",
     "packaging>=25.0",
-    "pre-commit>=4",
+    "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
-    "pyright>=1.1",
-    "ruff>=0.9",
-    "validate-pyproject>=0.11.0",
+    "pyright>=1.1.407",
+    "ruff>=0.14.10",
+    "validate-pyproject>=0.24.1",
 ]
 
 docs = [
     # REQ.DOCS.DEPS: External packages used to generate project documentation.
     "mike>=2.1.3",
-    "mkdocs>=1.5",
-    "mkdocs-material>=9",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.7.1",
     "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=1.0.0",
 ]
@@ -40,27 +45,16 @@ docs = [
 # CUSTOM: Pyright configuration for static type checking.
 # This configuration is NOT enforced by CI or pre-commit.
 # It is provided for instructors and advanced users who
-# explicitly run pyright. Students are NOT required to use it.
+# explicitly run pyright. It is optional.
 # WHY: Strict type checking helps catch bugs early.
-
-typeCheckingMode = "strict"
-pythonVersion = "3.12"
 include = ["src"]
 extraPaths = ["src"]
 exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]
-
-# Diagnostics (type-system focused)
+pythonVersion = "3.12"
 reportMissingImports = "warning"
-reportMissingTypeStubs = "warning"
-reportIncompatibleVariableOverride = "warning"
-reportIncompatibleMethodOverride = "warning"
-reportOptionalSubscript = "warning"
-
-# Reduce noise
 reportPrivateUsage = "none"
+typeCheckingMode = "strict" # strict | basic | off
 useLibraryCodeForTypes = false
-
-# Environment resolution
 venv = ".venv"
 venvPath = "."
 
@@ -127,12 +121,13 @@ force-sort-within-sections = true
 
 # REQ.BUILD:
 # - `build-backend` must be a build backend (setuptools or hatchling).
+# - `setuptools_scm` is a versioning plugin, not the build backend.
 
 [build-system]
 # WHY: Build system needed to create distributable packages.
 # CUSTOM: Using scm for dynamic version management.
 requires = [
-    "setuptools>=80",
+    "setuptools>=80.9.0",
     "setuptools_scm>=9.2.2",
 ]
 build-backend = "setuptools.build_meta"
@@ -141,14 +136,5 @@ build-backend = "setuptools.build_meta"
 include-package-data = true # WHY: Ensure non-code files are included in distributions.
 package-dir = {"" = "src"} # WHY: src-layout keeps code separate from config and docs.
 
-[tool.setuptools.package-data]
-"datafun_toolkit" = ["py.typed", "*.yaml"]
-
 [tool.setuptools.packages.find]
 where = ["src"] # WHY: Explicitly define package discovery location.
-
-[tool.setuptools_scm]
-tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$" # WHY: Match tags like v1.2.3 for versioning.
-fallback_version = "0.0.1"
-local_scheme = "no-local-version"
-version_file = "src/datafun_toolkit/_version.py"
