--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -90,6 +90,7 @@ nav:
   - Docs: project-mkdocs.md
   - Tips & Troubleshooting: pro-tips.md
 
+  - SKILLS: root/SKILLS.md
   - ANNOTATIONS: root/ANNOTATIONS.md
   - INSTRUCTORS: root/INSTRUCTORS.md
   - POLICIES: root/POLICIES.md
